# kazulauncher

./: Cargo.toml  README.md
locales/: en.yml  ja-JP.yml
src/: main.rs
src/launcher/: mod.rs
