[package]
name = "kazulauncher"
version = "0.1.0"
authors = ["kazukazu123123"]
edition = "2021"
repository = "https://github.com/kazukazu123123/kazulauncher"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
once_cell = "1.16.0"
rust-i18n = "1.0.1"
toml = "0.5.9"
egui-notify = "0.5.1"
native-dialog = "0.6.3"
